--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 Django==4.2.1
-django_image_cropping==1.7
+django-cors-headers==4.1.0
+django-crispy-forms==2.0
+django-image-cropping==1.7
+Pillow==9.5.0
+psycopg2-binary==2.9.6
+python-dotenv==1.0.0
 razorpay==1.3.0
